CHANGELOG

2021-09-27: Target to API 30 and fix TTS query permission. Fix the "xifan hol" q to Q search bug.
2021-08-09: New vocabulary from qep'a' 2021. Allow user-triggered database update over metered Internet.
2021-04-13: Fix issue where attributes were not displayed in entry title if {pIqaD} is enabled.
2021-04-09: Treat epithets as beings capable of language for the purposes of analysis.
2021-04-07: Add {qolqoS} font.
2021-03-28: Fixed bug where inhps words displayed wrong message about plural suffix.
2021-02-22: Minor bug fixes. Added support for Anki decks and KLCP1 vocabulary.
2021-02-06: Improve database upgrade logic.
2020-12-16: New vocabulary from qepHom'a' 2020.
2020-12-02: Add support for Finnish (fi) language.
2020-09-07: Remove some deprecated features. Fix KWOTD bug.
2020-07-17: Handle autotranslated notes.
2020-07-12: Add support for Portuguese (pt) language.
2020-02-23: Add {Saghan}, {-luH}, and {-la'} to grammar analsysi.
2019-07-22: upgrade SDK version to 29. remove build dependency on TTS.
2019-05-24: Update "extended canon" string in en and de, also some other strings in de.
2019-05-03: Fix {ngh} bug.
2019-03-24: Enable edit definition for German when unsupported features are enabled.
2018-11-20: Bug fixes: correctly handle {-oy}, fix display of names
2018-11-15: Vocabulary from qepHom'a' 2018.
2018-10-07: Deprecate API_7 version (target SDK 19), will no longer be updated.
2018-09-04: Fix Chinese search.
2018-08-19: Change German language options to broader secondary language options.
2018-08-02: Add ability to submit corrections to Google Forms.
2018-07-29: Corrections to qep'a' 2018 vocab.
2018-07-21: New vocabulary from qep'a' 2018.
2018-07-17: Disable auto-backup of database which seems to cause problems. Hide other languages for alt entries.
2018-06-25: Might as well add Persian, Swedish, and Chinese (Hong Kong) while we're at it. Also import Swedish data from Klingonska Akademien.