@@ -1,5 +1,6 @@
 CHANGELOG
 
+2021-10-05: Add ability to suppress display of notes in non-English language.
 2021-09-27: Target to API 30 and fix TTS query permission. Fix the "xifan hol" q to Q search bug.
 2021-08-09: New vocabulary from qep'a' 2021. Allow user-triggered database update over metered Internet.
 2021-04-13: Fix issue where attributes were not displayed in entry title if {pIqaD} is enabled.
